--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.3",
+    "swiper": "^8.0.3",
     "web-vitals": "^2.1.3",
     "webfontloader": "^1.6.28"
   },
