--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.24.0",
     "country-state-city": "^3.0.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "rc-input-number": "^7.3.4",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
